initial commit, initial file setup, create shoe_store database, crate shoe_stores table

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,9 @@
 development:
   adapter: postgresql
-  database: project_development
+  database: shoe_store_development
+  encoding: win1252
 
 test:
   adapter: postgresql
-  database: project_test
+  database: shoe_store_test
+  encoding: win1252
